[gd_scene load_steps=26 format=3 uid="uid://da23gfk2abg5f"]

[ext_resource type="Script" path="res://scenes/floating_scene.gd" id="1_ufbfg"]
[ext_resource type="Texture2D" uid="uid://d01h4xbn66tpi" path="res://assets/texture_07.png" id="2_yqhq4"]
[ext_resource type="Shader" path="res://shaders/device_screen.gdshader" id="3_o28i3"]
[ext_resource type="Texture2D" uid="uid://bcsoiuuis4yx2" path="res://assets/m8_screen_placeholder.png" id="4_0o31u"]
[ext_resource type="PackedScene" uid="uid://bckroenwlecqv" path="res://humanized_camera_3d.tscn" id="4_8iar1"]
[ext_resource type="PackedScene" uid="uid://budu6000msy4d" path="res://device_model.tscn" id="4_oaihv"]
[ext_resource type="PackedScene" uid="uid://263mog4cxgwr" path="res://audio_spectrum.tscn" id="5_ryr46"]
[ext_resource type="Shader" path="res://shaders/crt_screen.gdshader" id="5_t84je"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_h8o1l"]

[sub_resource type="Sky" id="Sky_m7fe1"]
sky_material = SubResource("PanoramaSkyMaterial_h8o1l")

[sub_resource type="Environment" id="Environment_dmk2d"]
background_mode = 2
sky = SubResource("Sky_m7fe1")
sky_rotation = Vector3(0, 0.401426, 0)
reflected_light_source = 1
tonemap_mode = 2
fog_light_color = Color(0.1176, 0.41552, 0.49, 1)
fog_density = 0.001
volumetric_fog_ambient_inject = 0.53
adjustment_enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s84w0"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_o28i3")
shader_parameter/emission_amount = 0.7
shader_parameter/edge_darken = -0.3
shader_parameter/edge_burn = 0.0
shader_parameter/edge_burn_ramp = 10.0
shader_parameter/brightness = 0.0
shader_parameter/backlight = false
shader_parameter/use_linear_filter = true
shader_parameter/texture_linear = ExtResource("4_0o31u")
shader_parameter/texture_nearest = ExtResource("4_0o31u")

[sub_resource type="Curve" id="Curve_cgsy1"]
_data = [Vector2(0, 0), 0.0, 0.0927835, 0, 0, Vector2(0.527778, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_jqqhn"]
curve = SubResource("Curve_cgsy1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_oyruv"]
emission_shape_scale = Vector3(10, 10, 10)
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3(0, 0, -1)
initial_velocity_max = 0.5
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.2
scale_curve = SubResource("CurveTexture_jqqhn")

[sub_resource type="Gradient" id="Gradient_ff30t"]
interpolation_mode = 2
interpolation_color_space = 2
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b6bpi"]
gradient = SubResource("Gradient_ff30t")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)
metadata/_snap_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2arbn"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 1, 1, 0.1)
albedo_texture = SubResource("GradientTexture2D_b6bpi")
billboard_mode = 1
billboard_keep_scale = true
proximity_fade_enabled = true

[sub_resource type="QuadMesh" id="QuadMesh_5vrwp"]
material = SubResource("StandardMaterial3D_2arbn")
size = Vector2(0.1, 0.1)

[sub_resource type="Gradient" id="Gradient_w7vqr"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_uwqla"]
noise_type = 3
frequency = 0.3711

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_6kjnt"]
color_ramp = SubResource("Gradient_w7vqr")
noise = SubResource("FastNoiseLite_uwqla")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nx6w6"]
render_priority = 0
shader = ExtResource("5_t84je")
shader_parameter/emission_amount = 1.0
shader_parameter/curvature_amount_x = -22.575
shader_parameter/curvature_amount_y = -14.1
shader_parameter/curvature_ramp = 2.0
shader_parameter/edge_darken = 0.0
shader_parameter/edge_burn = 0.0
shader_parameter/edge_burn_ramp = 0.0
shader_parameter/distort_amount = 3.0
shader_parameter/distort_offset = Vector2(0, 0)
shader_parameter/brightness = -0.25
shader_parameter/distort_texture = SubResource("NoiseTexture2D_6kjnt")

[sub_resource type="PlaneMesh" id="PlaneMesh_rbhh0"]
size = Vector2(48, 36)
subdivide_width = 24
subdivide_depth = 18

[sub_resource type="ViewportTexture" id="ViewportTexture_fk07f"]
viewport_path = NodePath("SubViewport")

[node name="M8Scene" type="Node3D"]
script = ExtResource("1_ufbfg")
m8_scene_name = "Floating"
metadata/_edit_vertical_guides_ = [640.0]
metadata/_edit_horizontal_guides_ = [480.0]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="BGVideoStreamPlayer" type="VideoStreamPlayer" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
volume_db = -80.0
expand = true
loop = true

[node name="BGTextureRect" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_yqhq4")
expand_mode = 1
stretch_mode = 6

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
unique_name_in_owner = true
environment = SubResource("Environment_dmk2d")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-0.649448, 0.362834, 0.668258, -1.32698e-07, -0.878817, 0.477159, 0.760406, 0.30989, 0.570746, 0.087698, 1.97022, -16.5359)
visible = false
light_color = Color(0.862333, 0.86, 1, 1)
shadow_enabled = true
shadow_bias = 0.01
shadow_opacity = 0.83
shadow_blur = 3.0

[node name="LightLamp" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.949972, 0.233564, -0.207367, 0, 0.663926, 0.747798, 0.312335, -0.710387, 0.630711, -2.964, 11.885, 10.369)
light_size = 1.0
shadow_enabled = true
shadow_bias = 0.01
shadow_opacity = 0.7
shadow_blur = 4.0
spot_range = 128.0
spot_attenuation = 0.0
spot_angle = 15.0
spot_angle_attenuation = 0.5

[node name="LightLeft" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.819152, 0.0559714, -0.570839, -1.74011e-07, 0.995227, 0.0975829, 0.573576, -0.0799351, 0.815243, -5.5, -1, 6)
visible = false
light_color = Color(1, 0.11, 0.11, 1)
light_energy = 16.0
light_size = 1.0
shadow_enabled = true
spot_range = 22.761
spot_angle = 41.58

[node name="LightRight" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.819152, -0.0499905, 0.571394, 0, 0.996195, 0.0871557, -0.573576, -0.0713938, 0.816035, 5.5, 1, 6)
visible = false
light_color = Color(0.614333, 0.11, 1, 1)
light_energy = 6.243
light_volumetric_fog_energy = 0.0
shadow_enabled = true
spot_range = 47.214
spot_angle = 36.8368

[node name="DeviceModel" parent="." instance=ExtResource("4_oaihv")]
unique_name_in_owner = true
transform = Transform3D(38.83, 0, 0, 0, 6.74276, -38.24, 0, 38.2401, 6.74275, 0, 0, 0)
screen_material = SubResource("ShaderMaterial_s84w0")

[node name="Camera3D" parent="." instance=ExtResource("4_8iar1")]
unique_name_in_owner = true
pan_range_zoomout = Vector2(10, 10)
cam_pan_range_zoomin = Vector2(2, 7)
dof_zoomin = 0.0
dof_focus_distance = 14.0
dof_blur_amount = 0.18
arm_length = 14.0

[node name="Camera3D" parent="Camera3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 14)

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
visible = false
amount = 512
lifetime = 10.0
visibility_aabb = AABB(-11.9327, -4, -13.8765, 23.8655, 8, 27.753)
process_material = SubResource("ParticleProcessMaterial_oyruv")
draw_pass_1 = SubResource("QuadMesh_5vrwp")

[node name="DisplayMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.745, 0, 0, 0, -3.2565e-08, -0.745, 0, 0.745, -3.2565e-08, 0, 0, -20)
visible = false
material_override = SubResource("ShaderMaterial_nx6w6")
mesh = SubResource("PlaneMesh_rbhh0")

[node name="SpriteAudioSpectrum" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1.25, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -4)
pixel_size = 0.035
texture_filter = 0
texture = SubResource("ViewportTexture_fk07f")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(640, 480)

[node name="AudioSpectrum" parent="SubViewport" instance=ExtResource("5_ryr46")]
unique_name_in_owner = true
position = Vector2(320, 240)

[editable path="Camera3D"]
